--- a/Red-line.html
+++ b/Red-line.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 
+<!-- Responsive menu -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <!-- Logo -->
   <a href="#" class="navbar-brand"><img src="Red-line.jpg" alt=""></a>
@@ -20,7 +21,7 @@
 <!-- Menu Items -->
 <div class="collapse navbar-collapse" id="navbarMenu">
   <ul class="navbar-nav mr-auto">
-    <li class="nav-item">
+    <li class="active" class="nav-item">
       <a href="#" class="nav-link">HOME</a>
     </li>
     <li class="nav-item">
@@ -40,8 +41,56 @@
     </li>
     </ul>
   </div>
-
 </nav>
+
+ <!-- Image Carousel-->
+
+       <div id="slider" class="carousel slide" data-ride="carousel">
+
+         <!-- Indicators dot nov -->
+
+         <!-- Wrapper for slides -->
+         <div class="carousel-inner">
+
+           <div class="carousel-item active">
+             <img src="carousel1.jpg" class="d-block w-100" alt="work">
+             <div class="carousel-caption">
+               <h2>De basis van kwaliteit...</h2>
+             </div>
+           </div>
+           <div class="carousel-item">
+             <img src="carousel2.jpg" class="d-block w-100" alt="work1">
+             <div class="carousel-caption">
+             </div>
+           </div>
+           <div class="carousel-item">
+             <img src="carousel3.jpg" class="d-block w-100" alt="work2">
+             <div class="carousel-caption">
+             </div>
+           </div>
+         </div>
+
+         <!-- Controls or next and prev buttons -->
+        <a class="carousel-control-prev" href="#slider" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#my-slider" role="button" data-slide="next">
+           <span class="carousel-control-next-icon" aria-hidden="true"></span>
+           <span class="sr-only">Next</span>
+        </a>
+       </div>
+
+  <h1>Grondwerken De Saegher en zoon, Sint-Niklaas </h1>
+
+  <p>Welkom op de website van Grondwerken De Saegher en Zoon.<br>
+    Reeds sinds 1984 zijn wij actief in de grondwerken. Ons familiebedrijf is met de jaren vergroot, en vandaag staan we met ons uitgebreid en goed onderhouden machinepark klaar om al uw wensen in te vullen!</p>
+
+  <p>Vader Frans De Saegher startte het bedrijf in Sint-Gillis-Waas, en zoon Guy werd na schooltijd klaargestoomd ter opvolging.</p>µ
+
+  <a href="#">lees meer over ons bedrijf</a>
+
+
 
 
 
