--- a/grondwerken.html
+++ b/grondwerken.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -6,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="Red-Line.css">
-  <title>Red-Line</title>
+  <title>Grondwerken - De Saegher</title>
 </head>
 <body>
 
@@ -21,33 +20,28 @@
 <!-- Menu Items -->
 <div class="collapse navbar-collapse" id="navbarMenu">
   <ul class="navbar-nav mr-auto">
+    <li class="nav-item">
+      <a href="index.html" class="nav-link">HOME</a>
+    </li>
     <li class="active" class="nav-item">
-      <a href="#" class="nav-link">HOME</a>
+      <a href="grondwerken.html" class="nav-link">GRONDWERKEN</a>
     </li>
-    <li class="nav-item">
-      <a href="#" class="nav-link">GRONDWERKEN</a>
-    </li>
-    <li class="nav-item">
-      <a href="#" class="nav-link">NIVELLEREINGSWERKEN</a>
-    </li>
-    <li class="nav-item">
-      <a href="#" class="nav-link">ASFALTWERKEN</a>
-    </li>
-    <li class="nav-item">
-      <a href="#" class="nav-link">RIOLERINGSWERKEN</a>
-    </li>
-    <li class="nav-item">
-      <a href="#" class="nav-link">CONTACT</a>
+      <li class="nav-item">
+      <a href="contact.html" class="nav-link">CONTACT</a>
     </li>
     </ul>
   </div>
 </nav>
 
- <!-- Image Carousel-->
-
+       <!-- Image Carousel-->
        <div id="slider" class="carousel slide" data-ride="carousel">
 
          <!-- Indicators dot nov -->
+         <ol class="carousel-indicators">
+           <li data-target="#slider" data-slide-to="0" class="active"></li>
+           <li data-target="#slider" data-slide-to="1"></li>
+           <li data-target="#slider" data-slide-to="2"></li>
+         </ol>
 
          <!-- Wrapper for slides -->
          <div class="carousel-inner">
@@ -70,7 +64,7 @@
            </div>
          </div>
 
-         <!-- Controls or next and prev buttons -->
+        <!-- Controls or next and prev buttons -->
         <a class="carousel-control-prev" href="#slider" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
@@ -80,25 +74,12 @@
            <span class="sr-only">Next</span>
         </a>
        </div>
-
-  <h1>Grondwerken De Saegher en zoon, Sint-Niklaas </h1>
-
-  <p>Welkom op de website van Grondwerken De Saegher en Zoon.<br>
-    Reeds sinds 1984 zijn wij actief in de grondwerken. Ons familiebedrijf is met de jaren vergroot, en vandaag staan we met ons uitgebreid en goed onderhouden machinepark klaar om al uw wensen in te vullen!</p>
-
-  <p>Vader Frans De Saegher startte het bedrijf in Sint-Gillis-Waas, en zoon Guy werd na schooltijd klaargestoomd ter opvolging.</p>µ
-
-  <a href="#">lees meer over ons bedrijf</a>
+       <!-- End of carousel -->
 
 
 
-
-
-
-
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-</body>
-</html>
+       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+       </body>
+       </html>
