--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="Red-Line.css">
-  <title>Red-Line</title>
+  <title>Home - De Saegher</title>
 </head>
 <body>
 
@@ -22,32 +22,28 @@
 <div class="collapse navbar-collapse" id="navbarMenu">
   <ul class="navbar-nav mr-auto">
     <li class="active" class="nav-item">
-      <a href="#" class="nav-link">HOME</a>
+      <a href="index.html" class="nav-link">HOME</a>
     </li>
     <li class="nav-item">
       <a href="#" class="nav-link">GRONDWERKEN</a>
     </li>
     <li class="nav-item">
-      <a href="#" class="nav-link">NIVELLEREINGSWERKEN</a>
-    </li>
-    <li class="nav-item">
-      <a href="#" class="nav-link">ASFALTWERKEN</a>
-    </li>
-    <li class="nav-item">
-      <a href="#" class="nav-link">RIOLERINGSWERKEN</a>
-    </li>
-    <li class="nav-item">
-      <a href="#" class="nav-link">CONTACT</a>
+      <a href="contact.html" class="nav-link">CONTACT</a>
     </li>
     </ul>
   </div>
 </nav>
 
- <!-- Image Carousel-->
-
+       <!-- Image Carousel-->
        <div id="slider" class="carousel slide" data-ride="carousel">
 
          <!-- Indicators dot nov -->
+         <ol class="carousel-indicators">
+           <li data-target="#slider" data-slide-to="0" class="active"></li>
+           <li data-target="#slider" data-slide-to="1"></li>
+           <li data-target="#slider" data-slide-to="2"></li>
+         </ol>
+
 
          <!-- Wrapper for slides -->
          <div class="carousel-inner">
@@ -80,15 +76,45 @@
            <span class="sr-only">Next</span>
         </a>
        </div>
+       <!-- End of carousel -->
 
-  <h1>Grondwerken De Saegher en zoon, Sint-Niklaas </h1>
+<!-- Using grid to position content -->
+<div class="grid-home">
+  <div>
+    <h1>Aannemer Grondwerken De Saegher en zoon te Sint-Niklaas.</h1>
+    <hr/>
 
-  <p>Welkom op de website van Grondwerken De Saegher en Zoon.<br>
-    Reeds sinds 1984 zijn wij actief in de grondwerken. Ons familiebedrijf is met de jaren vergroot, en vandaag staan we met ons uitgebreid en goed onderhouden machinepark klaar om al uw wensen in te vullen!</p>
+    <p>Welkom op de website van Grondwerken De Saegher en Zoon.</p>
 
-  <p>Vader Frans De Saegher startte het bedrijf in Sint-Gillis-Waas, en zoon Guy werd na schooltijd klaargestoomd ter opvolging.</p>µ
+      <h2>Historiek</h2>
+    <p> Reeds sinds 1984 zijn wij actief in de grondwerken. Ons familiebedrijf is met de jaren vergroot, en vandaag staan we met ons uitgebreid en goed onderhouden machinepark klaar om al uw wensen in te vullen!</p>
 
-  <a href="#">lees meer over ons bedrijf</a>
+    <p>Vader Frans De Saegher startte het bedrijf in Sint-Gillis-Waas, en zoon Guy werd na schooltijd klaargestoomd ter opvolging.</p>
+
+    <h2>Vestiging Heihoek Nieuwkerken-Waas</h2>
+
+    <p>Inmiddels zijn we gevestigd in de nieuwe industriezone Heihoek in Sint-Niklaas (Nieuwkerken-Waas) </p>
+
+    <h2>Kwaliteit</h2>
+
+    <p>Ondanks zijn jarenlange ervaring in de sector, laat grondwerken DE SAEGHER zich op vandaag nog steeds inspireren door de traditionele waarden van een ambitieus familiebedrijf. <br> Elke dag streeft ons team ervaren medewerkers naar een optimale klantentevredenheid. <br> Ieder werk proberen wij uit te voeren alsof het voor onszelf was. </p>
+
+    <p>We proberen kwaliteit te optimaliseren, en hiervoor is ook stiptheid in onze afspraken een belangrijke peiler. <br> Aangezien ons team van een 10-tal werknemers flexibel beschikbaar staat, kan uw werk op korte termijn tot een goed einde gebracht worden.</p>
+
+    <h2>Veiligheid</h2>
+
+    <p>Ons personeel is ervaren en gedreven. Onze werknemers beschikken over een VCA-dipoloma. "VCA" staat voor "Veiligheids Checklist Aannemers", en is een gecertificeerd veiligheids-beheerssysteem, waarmee een bedrijf aantoont dat het veilig wil en kan werken. Ons team legde hiervoor met succes een examen af.<br>
+    De markt eist steeds meer dat we aan strengere veiligheidseisen voldoen, hiervoor is de VCA certifiëring een belangrijke waarborg.Veiligheid is voor al onze medewerkers van groot belang.</p>
+    </p>
+
+  </div>
+  <div class="h2">
+
+  </div>
+  <div class="h3">
+
+  </div>
+ </div>
 
 
 
