--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <link rel="stylesheet" href="Red-Line.css">
   <title>Home - De Saegher</title>
 </head>
@@ -25,7 +26,7 @@
       <a href="index.html" class="nav-link">HOME</a>
     </li>
     <li class="nav-item">
-      <a href="#" class="nav-link">GRONDWERKEN</a>
+      <a href="grondwerken.html" class="nav-link">GRONDWERKEN</a>
     </li>
     <li class="nav-item">
       <a href="contact.html" class="nav-link">CONTACT</a>
@@ -51,17 +52,22 @@
            <div class="carousel-item active">
              <img src="carousel1.jpg" class="d-block w-100" alt="work">
              <div class="carousel-caption">
-               <h2>De basis van kwaliteit...</h2>
+               <h2 class="H-head">De basis van kwaliteit...</h2>
+               <a class="tel" href="contact.html">0475 24 57 91</a>
              </div>
            </div>
            <div class="carousel-item">
              <img src="carousel2.jpg" class="d-block w-100" alt="work1">
              <div class="carousel-caption">
+               <h2 class="H-head">De basis van kwaliteit...</h2>
+               <a class="tel" href="contact.html">0475 24 57 91</a>
              </div>
            </div>
            <div class="carousel-item">
              <img src="carousel3.jpg" class="d-block w-100" alt="work2">
              <div class="carousel-caption">
+               <h2 class="H-head">De basis van kwaliteit...</h2>
+               <a class="tel" href="contact.html">0475 24 57 91</a>
              </div>
            </div>
          </div>
@@ -79,9 +85,9 @@
        <!-- End of carousel -->
 
 <!-- Using grid to position content -->
-<div class="grid-home">
-  <div>
-    <h1>Aannemer Grondwerken De Saegher en zoon te Sint-Niklaas.</h1>
+<div class="home-full">
+  <div class="home-left">
+    <h1>Grondwerken De Saegher en zoon te Sint-Niklaas.</h1>
     <hr/>
 
     <p>Welkom op de website van Grondwerken De Saegher en Zoon.</p>
@@ -90,10 +96,6 @@
     <p> Reeds sinds 1984 zijn wij actief in de grondwerken. Ons familiebedrijf is met de jaren vergroot, en vandaag staan we met ons uitgebreid en goed onderhouden machinepark klaar om al uw wensen in te vullen!</p>
 
     <p>Vader Frans De Saegher startte het bedrijf in Sint-Gillis-Waas, en zoon Guy werd na schooltijd klaargestoomd ter opvolging.</p>
-
-    <h2>Vestiging Heihoek Nieuwkerken-Waas</h2>
-
-    <p>Inmiddels zijn we gevestigd in de nieuwe industriezone Heihoek in Sint-Niklaas (Nieuwkerken-Waas) </p>
 
     <h2>Kwaliteit</h2>
 
@@ -105,15 +107,33 @@
 
     <p>Ons personeel is ervaren en gedreven. Onze werknemers beschikken over een VCA-dipoloma. "VCA" staat voor "Veiligheids Checklist Aannemers", en is een gecertificeerd veiligheids-beheerssysteem, waarmee een bedrijf aantoont dat het veilig wil en kan werken. Ons team legde hiervoor met succes een examen af.<br>
     De markt eist steeds meer dat we aan strengere veiligheidseisen voldoen, hiervoor is de VCA certifiëring een belangrijke waarborg.Veiligheid is voor al onze medewerkers van groot belang.</p>
-    </p>
-
+  </p>
   </div>
-  <div class="h2">
 
+  <div class="home-right">
+    <img src="right1.png">
+    <img src="right2.png">
   </div>
-  <div class="h3">
+ </div>
 
-  </div>
+ <div class="H-footer">
+   <div class="h-f-l">
+     <h2>contacteer ons</h2> <hr>
+     <p>Anthonis De Jonghestraat 27 <br>
+     9100 Sint-Niklaas België <br>
+     Ligging </p>
+   </div>
+
+   <div class="h-f-m">
+     <p>Middle</p>
+   </div>
+
+   <div class="h-f-r">
+     <h2>Openingsuren</h2> <hr>
+     <p> Ma - Vr : 07u00-18u00 <br>
+     Za : gesloten <br>
+     Zo : gesloten</p>
+   </div>
  </div>
 
 
