--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
         <a href="index.html" class="nav-link">HOME</a>
       </li>
       <li class="nav-item">
-        <a href="#" class="nav-link">GRONDWERKEN</a>
+        <a href="grondwerken.html" class="nav-link">GRONDWERKEN</a>
       </li>
         <li class="active" class="nav-item">
         <a href="contact.html" class="nav-link">CONTACT</a>
