All ok, update home page

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
        </div>
        <!-- End of carousel -->
 
-<!-- Using grid to position content -->
+<!-- Using grid to position top content -->
 <div class="home-full">
   <div class="home-left">
     <h1>Grondwerken De Saegher en zoon te Sint-Niklaas.</h1>
@@ -110,12 +110,37 @@
   </p>
   </div>
 
+
   <div class="home-right">
     <img src="right1.png">
     <img src="right2.png">
   </div>
  </div>
+ <!-- end of top content -->
 
+<!-- start of middle content -->
+<div class="H-middle">
+
+    <div class="h-m-l">
+     <h2>Grondwerken</h2>
+     <p>Op zoek naar een proffecional die uw grondwerken uitvoerd? <br>
+     Zoek niet verder, want dit is helemaal het kolfje naar de hand van deze firma. <br>
+    Dankzij de jarenlange ervaring in de sector garanderen wij u een vakkundige aanpak.</p>
+   </div>
+
+   <div class="h-m-m">
+     <h2>Afbraakwerken</h2>
+     <p>Voor een vakkundige uitvoering van uw afbraakwerken kunt u vertrouwen op onze expertise. ons dynamisch bedrijf heeft alle oplossingen voor handen om uw afbraak tot een goed einde te brengen. vraag uw offerte. </p>
+   </div>
+
+   <div class="h-m-r">
+     <h2>Asfalteringswerken</h2>
+     <p>Als u opzoek bent naar een proffecional die u bijstaat bij uw betonwerken, zoek dan niet verder. Wij voeren allerhande asfalteringswerken uit en met onze jarenlange ervaring zijn wij als asfalteringsspecialist een uitstekende keuze. </p>
+   </div>
+ </div>
+<!-- stop of middle content -->
+
+<!-- start of footer -->
  <div class="H-footer">
    <div class="h-f-l">
      <h2>contacteer ons</h2> <hr>
@@ -135,6 +160,7 @@
      Zo : gesloten</p>
    </div>
  </div>
+ <!-- end of footer -->
 
 
 
