Home Page finished

--- a/index.html
+++ b/index.html
@@ -122,19 +122,19 @@
 <div class="H-middle">
 
     <div class="h-m-l">
-     <h2>Grondwerken</h2>
-     <p>Op zoek naar een proffecional die uw grondwerken uitvoerd? <br>
-     Zoek niet verder, want dit is helemaal het kolfje naar de hand van deze firma. <br>
+     <h2>GRONDWERKEN</h2>
+     <p>Op zoek naar een proffecional die uw grondwerken uitvoerd?
+     Zoek niet verder, want dit is helemaal het kolfje naar de hand van deze firma.
     Dankzij de jarenlange ervaring in de sector garanderen wij u een vakkundige aanpak.</p>
    </div>
 
    <div class="h-m-m">
-     <h2>Afbraakwerken</h2>
+     <h2>AFBRAAKWERKEN</h2>
      <p>Voor een vakkundige uitvoering van uw afbraakwerken kunt u vertrouwen op onze expertise. ons dynamisch bedrijf heeft alle oplossingen voor handen om uw afbraak tot een goed einde te brengen. vraag uw offerte. </p>
    </div>
 
    <div class="h-m-r">
-     <h2>Asfalteringswerken</h2>
+     <h2>ASFALTERINGSWERKEN</h2>
      <p>Als u opzoek bent naar een proffecional die u bijstaat bij uw betonwerken, zoek dan niet verder. Wij voeren allerhande asfalteringswerken uit en met onze jarenlange ervaring zijn wij als asfalteringsspecialist een uitstekende keuze. </p>
    </div>
  </div>
@@ -143,18 +143,22 @@
 <!-- start of footer -->
  <div class="H-footer">
    <div class="h-f-l">
-     <h2>contacteer ons</h2> <hr>
+       <h2>CONTACTEER ONS</h2> <hr>
      <p>Anthonis De Jonghestraat 27 <br>
      9100 Sint-Niklaas België <br>
      Ligging </p>
    </div>
 
    <div class="h-f-m">
-     <p>Middle</p>
+     <ul>
+       <li><a href="#"><i class="fas fa-envelope-square"></i></a></li>
+       <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
+       <li><a href="#"><i class="fab fa-google-plus-square"></i></a></li>
+     </ul>
    </div>
 
    <div class="h-f-r">
-     <h2>Openingsuren</h2> <hr>
+     <h2>OPENINGSUREN</h2> <hr>
      <p> Ma - Vr : 07u00-18u00 <br>
      Za : gesloten <br>
      Zo : gesloten</p>
