--- a/contact.html
+++ b/contact.html
@@ -78,14 +78,33 @@
          </div>
          <!-- End of carousel -->
 
-         <h1>Contactgegevens De Saegher en Zoon BVBA</h1><hr>
-         <p>U kan ons bereiken via gsm op het nummer 0475 24 57 91. <br>
-         Via telefoon zijn we ter beschikking op het nummer 03 777 98 96. Faxen kan naar 03 770 68 89.</p>
 
-         <p>U kan ons ook een email sturen via info@grondwerkendesaegher.be, of door het onderstaande contactformulier in te vullen. Voor vragen ivm offertes kan u ons best bereiken via verkoop@grondwerkendesaegher.be.</p>
+          <div class="contact-middle">
+            <div class="c-m-l">
+              <h1>Contactgegevens De Saegher en Zoon BVBA</h1><hr>
+              <p>U kan ons bereiken via gsm op het nummer 0475 24 57 91. <br>
+              Via telefoon zijn we ter beschikking op het nummer 03 777 98 96. Faxen kan naar 03 770 68 89.</p>
 
-         <p>Ons kantoor en magazijn is gelegen in de Anthonis De Jonghestraat 27 in Sint-Niklaas (deelgemeente Nieuwkerken-Waas).
-         Ons BTW-nummer is BE 0459.108.621.</p>
+              <p>U kan ons ook een email sturen via info@grondwerkendesaegher.be, of door het onderstaande contactformulier in te vullen. Voor vragen ivm offertes kan u ons best bereiken via verkoop@grondwerkendesaegher.be.</p>
+
+              <p>Ons kantoor en magazijn is gelegen in de Anthonis De Jonghestraat 27 in Sint-Niklaas (deelgemeente Nieuwkerken-Waas).
+              Ons BTW-nummer is BE 0459.108.621.</p>
+            </div>
+
+            <!-- Start of contact from -->
+            <div class="c-m-r">
+
+
+            </div>
+            <!-- end of contact from -->
+          </div>
+
+          <div class="contact-footer">
+            <img src="Maps.png">            
+          </div>
+
+
+
 
 
 </body>
