--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
   <!-- Responsive menu -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <!-- Logo -->
-    <a href="#" class="navbar-brand"><img src="Red-line.jpg" alt=""></a>
+    <a href="index.html" class="navbar-brand"><img src="Red-line.jpg" alt=""></a>
     <!-- responsive button -->
     <button class="navbar-toggler" data-toggle="collapse" data-target="navbarMenu">
       <span class="navbar-toggler-icon"></span>
@@ -71,14 +71,14 @@
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
           </a>
-          <a class="carousel-control-next" href="#my-slider" role="button" data-slide="next">
+          <a class="carousel-control-next" href="slider" role="button" data-slide="next">
              <span class="carousel-control-next-icon" aria-hidden="true"></span>
              <span class="sr-only">Next</span>
           </a>
          </div>
          <!-- End of carousel -->
 
-
+          <!-- Start of contact from left -->
           <div class="contact-middle">
             <div class="c-m-l">
               <h1>Contactgegevens De Saegher en Zoon BVBA</h1><hr>
@@ -90,17 +90,31 @@
               <p>Ons kantoor en magazijn is gelegen in de Anthonis De Jonghestraat 27 in Sint-Niklaas (deelgemeente Nieuwkerken-Waas).
               Ons BTW-nummer is BE 0459.108.621.</p>
             </div>
+            <!-- end of contact from left -->
 
-            <!-- Start of contact from -->
+
+            <!-- Start of contact from right-->
             <div class="c-m-r">
 
-
+              <div class="login">
+                <input type="text" class="input" placeholder="Naam *">
+                <input type="text" class="input" placeholder="Adres">
+                <input type="text" class="input" placeholder="E-mail *">
+                <input type="text" class="input" placeholder="Telefoon">
             </div>
-            <!-- end of contact from -->
-          </div>
 
+
+            <div class="msg">
+              <textarea class="area" placeholder="Commentaar *"></textarea>
+            </div>
+
+            <div class="btn">VERZENDEN</div>
+          </div>
+          <!-- end of contact from right -->
+
+          <!-- footer -->
           <div class="contact-footer">
-            <img src="Maps.png">            
+            <img src="Maps.png">
           </div>
 
 
