--- a/grondwerken.html
+++ b/grondwerken.html
@@ -12,7 +12,7 @@
 <!-- Responsive menu -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <!-- Logo -->
-  <a href="#" class="navbar-brand"><img src="Red-line.jpg" alt=""></a>
+  <a href="index.html" class="navbar-brand"><img src="Red-line.jpg" alt=""></a>
   <!-- responsive button -->
   <button class="navbar-toggler" data-toggle="collapse" data-target="navbarMenu">
     <span class="navbar-toggler-icon"></span>
@@ -69,7 +69,7 @@
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
         </a>
-        <a class="carousel-control-next" href="#my-slider" role="button" data-slide="next">
+        <a class="carousel-control-next" href="#slider" role="button" data-slide="next">
            <span class="carousel-control-next-icon" aria-hidden="true"></span>
            <span class="sr-only">Next</span>
         </a>
