--- a/contact.html
+++ b/contact.html
@@ -96,28 +96,30 @@
             <!-- Start of contact from right-->
             <div class="c-m-r">
 
-              <div class="login">
+
+
+              <div class="contact">
+               <div class="login">
                 <input type="text" class="input" placeholder="Naam *">
                 <input type="text" class="input" placeholder="Adres">
                 <input type="text" class="input" placeholder="E-mail *">
                 <input type="text" class="input" placeholder="Telefoon">
+               </div>
+
+
+               <div class="msg">
+                <textarea class="area" placeholder="Commentaar *"></textarea>
+               </div>
+
+               <div class="btn">VERZENDEN</div>
+              </div>
             </div>
-
-
-            <div class="msg">
-              <textarea class="area" placeholder="Commentaar *"></textarea>
-            </div>
-
-            <div class="btn">VERZENDEN</div>
-          </div>
-          <!-- end of contact from right -->
+              <!-- end of contact from right -->
 
           <!-- footer -->
           <div class="contact-footer">
             <img src="Maps.png">
           </div>
-
-
 
 
 
