contact page update

--- a/contact.html
+++ b/contact.html
@@ -82,13 +82,19 @@
           <div class="contact-middle">
             <div class="c-m-l">
               <h1>Contactgegevens De Saegher en Zoon BVBA</h1><hr>
-              <p>U kan ons bereiken via gsm op het nummer 0475 24 57 91. <br>
-              Via telefoon zijn we ter beschikking op het nummer 03 777 98 96. Faxen kan naar 03 770 68 89.</p>
 
-              <p>U kan ons ook een email sturen via info@grondwerkendesaegher.be, of door het onderstaande contactformulier in te vullen. Voor vragen ivm offertes kan u ons best bereiken via verkoop@grondwerkendesaegher.be.</p>
+              <p>Grondwerken De Saegher kunt u contacteren voor allerhande werken, gaande van het afbreken van constructies, gieten van beton tot grondwerken en zelfs nivelleren regio Sint-Niklaas, Oost- en West-Vlaanderen.</p>
 
-              <p>Ons kantoor en magazijn is gelegen in de Anthonis De Jonghestraat 27 in Sint-Niklaas (deelgemeente Nieuwkerken-Waas).
-              Ons BTW-nummer is BE 0459.108.621.</p>
+              <p> Neem gerust <a href="#">contact</a> op voor een gratis bezoek ter plaatse!
+
+              <p>Anthonis De Jonghestraat 27 <br>
+              9100 Sint-Niklaas - België <br>
+              GSM: 0475 24 57 91 <br>
+              tel: 03 777 98 96   <br>
+              fax: 03 770 68 89 <br>
+              Email: <a href="#">info@grondwerkendesaegher.be</a> <br>
+              BTW BE 0459.108.621 </p>
+
             </div>
             <!-- end of contact from left -->
 
