--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 <!-- Using grid to position top content -->
 <div class="home-full">
   <div class="home-left">
-    <h1>Grondwerken De Saegher en zoon te Sint-Niklaas.</h1>
+    <h1>GRONDWERKEN DE SAEGHER EN ZOON TE SINT-NIKLAAS</h1>
     <hr/>
 
     <p>Welkom op de website van Grondwerken De Saegher en Zoon.</p>
