Contact page finished!

--- a/contact.html
+++ b/contact.html
@@ -124,7 +124,7 @@
 
           <!-- footer -->
           <div class="contact-footer">
-            <img src="Maps.png">
+            <img src="Maps.jpg">
           </div>
 
 
