--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
   </nav>
 
          <!-- Image Carousel-->
-         <div id="slider" class="carousel slide" data-ride="carousel">
+         <div id="slider-contact" class="carousel slide" data-ride="carousel">
 
            <!-- Indicators dot nov -->
            <ol class="carousel-indicators">
@@ -49,19 +49,21 @@
            <div class="carousel-inner">
 
              <div class="carousel-item active">
-               <img src="carousel1.jpg" class="d-block w-100" alt="work">
+               <img src="carousel1.jpg" class="d-block w-100"  alt="work">
                <div class="carousel-caption">
-                 <h2>De basis van kwaliteit...</h2>
+                 <h2>DE BASIS VAN KWALITEIT...</h2>
                </div>
              </div>
              <div class="carousel-item">
                <img src="carousel2.jpg" class="d-block w-100" alt="work1">
                <div class="carousel-caption">
+                 <h2>DE BASIS VAN KWALITEIT...</h2>
                </div>
              </div>
              <div class="carousel-item">
                <img src="carousel3.jpg" class="d-block w-100" alt="work2">
                <div class="carousel-caption">
+                 <h2>DE BASIS VAN KWALITEIT...</h2>
                </div>
              </div>
            </div>
