--- a/grondwerken.html
+++ b/grondwerken.html
@@ -55,11 +55,13 @@
            <div class="carousel-item">
              <img src="carousel2.jpg" class="d-block w-100" alt="work1">
              <div class="carousel-caption">
+               <h2>DE BASIS VAN KWALITEIT...</h2>
              </div>
            </div>
            <div class="carousel-item">
              <img src="carousel3.jpg" class="d-block w-100" alt="work2">
              <div class="carousel-caption">
+               <h2>DE BASIS VAN KWALITEIT...</h2>
              </div>
            </div>
          </div>
