--- a/index.html
+++ b/index.html
@@ -52,21 +52,21 @@
            <div class="carousel-item active">
              <img src="carousel1.jpg" class="d-block w-100" alt="work">
              <div class="carousel-caption">
-               <h2 class="H-head">De basis van kwaliteit...</h2>
+               <h2 class="H-head">DE BASIS VAN KWALITEIT...</h2>
                <a class="tel" href="contact.html">0475 24 57 91</a>
              </div>
            </div>
            <div class="carousel-item">
              <img src="carousel2.jpg" class="d-block w-100" alt="work1">
              <div class="carousel-caption">
-               <h2 class="H-head">De basis van kwaliteit...</h2>
+               <h2 class="H-head">DE BASIS VAN KWALITEIT...</h2>
                <a class="tel" href="contact.html">0475 24 57 91</a>
              </div>
            </div>
            <div class="carousel-item">
              <img src="carousel3.jpg" class="d-block w-100" alt="work2">
              <div class="carousel-caption">
-               <h2 class="H-head">De basis van kwaliteit...</h2>
+               <h2 class="H-head">DE BASIS VAN KWALITEIT...</h2>
                <a class="tel" href="contact.html">0475 24 57 91</a>
              </div>
            </div>
