Responsive menu fix

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- Logo -->
   <a href="index.html" class="navbar-brand"><img src="Red-line.jpg" alt=""></a>
   <!-- responsive button -->
-  <button class="navbar-toggler" data-toggle="collapse" data-target="navbarMenu">
+  <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
     <span class="navbar-toggler-icon"></span>
   </button>
 <!-- Menu Items -->
