--- a/grondwerken.html
+++ b/grondwerken.html
@@ -4,13 +4,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <link rel="stylesheet" href="Red-Line.css">
   <title>Grondwerken - De Saegher</title>
 </head>
 <body>
-
+<a class="gotopbtn" href="#"><i class="fas fa-caret-square-up"></i></a>
 <!-- Responsive menu -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
   <!-- Logo -->
   <a href="index.html" class="navbar-brand"><img src="Red-line.jpg" alt=""></a>
   <!-- responsive button -->
@@ -49,19 +50,22 @@
            <div class="carousel-item active">
              <img src="carousel1.jpg" class="d-block w-100" alt="work">
              <div class="carousel-caption">
-               <h2>De basis van kwaliteit...</h2>
+               <h2 class="H-head">DE BASIS VAN KWALITEIT...</h2>
+               <p class="tel" href="contact.html">0475 24 57 91</p>
              </div>
            </div>
            <div class="carousel-item">
              <img src="carousel2.jpg" class="d-block w-100" alt="work1">
              <div class="carousel-caption">
-               <h2>DE BASIS VAN KWALITEIT...</h2>
+               <h2 class="H-head">DE BASIS VAN KWALITEIT...</h2>
+               <p class="tel" href="contact.html">0475 24 57 91</p>
              </div>
            </div>
            <div class="carousel-item">
              <img src="carousel3.jpg" class="d-block w-100" alt="work2">
              <div class="carousel-caption">
-               <h2>DE BASIS VAN KWALITEIT...</h2>
+               <h2 class="H-head">DE BASIS VAN KWALITEIT...</h2>
+               <p class="tel" href="contact.html">0475 24 57 91</p>
              </div>
            </div>
          </div>
