--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
 <!-- Responsive menu -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
   <!-- Logo -->
   <a href="index.html" class="navbar-brand"><img src="Red-line.jpg" alt=""></a>
   <!-- responsive button -->
@@ -53,21 +53,21 @@
              <img src="carousel1.jpg" class="d-block w-100" alt="work">
              <div class="carousel-caption">
                <h2 class="H-head">DE BASIS VAN KWALITEIT...</h2>
-               <a class="tel" href="contact.html">0475 24 57 91</a>
+               <p class="tel" href="contact.html">0475 24 57 91</p>
              </div>
            </div>
            <div class="carousel-item">
              <img src="carousel2.jpg" class="d-block w-100" alt="work1">
              <div class="carousel-caption">
                <h2 class="H-head">DE BASIS VAN KWALITEIT...</h2>
-               <a class="tel" href="contact.html">0475 24 57 91</a>
+               <p class="tel" href="contact.html">0475 24 57 91</p>
              </div>
            </div>
            <div class="carousel-item">
              <img src="carousel3.jpg" class="d-block w-100" alt="work2">
              <div class="carousel-caption">
                <h2 class="H-head">DE BASIS VAN KWALITEIT...</h2>
-               <a class="tel" href="contact.html">0475 24 57 91</a>
+               <p class="tel" href="contact.html">0475 24 57 91</p>
              </div>
            </div>
          </div>
@@ -156,7 +156,7 @@
        <li><a href="#"><i class="fab fa-google-plus-square"></i></a></li>
      </ul>
    </div>
-
+  
    <div class="h-f-r">
      <h2>OPENINGSUREN</h2> <hr>
      <p> Ma - Vr : 07u00-18u00 <br>
