--- a/contact.html
+++ b/contact.html
@@ -5,13 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <link rel="stylesheet" href="Red-Line.css">
   <title>Contact - De Saegher</title>
 </head>
 <body>
+  <a class="gotopbtn" href="#"><i class="fas fa-caret-square-up"></i></a>
 
   <!-- Responsive menu -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
     <!-- Logo -->
     <a href="index.html" class="navbar-brand"><img src="Red-line.jpg" alt=""></a>
     <!-- responsive button -->
@@ -36,7 +38,7 @@
   </nav>
 
          <!-- Image Carousel-->
-         <div id="slider-contact" class="carousel slide" data-ride="carousel">
+         <div id="slider" class="carousel slide" data-ride="carousel">
 
            <!-- Indicators dot nov -->
            <ol class="carousel-indicators">
@@ -45,35 +47,39 @@
              <li data-target="#slider" data-slide-to="2"></li>
            </ol>
 
+
            <!-- Wrapper for slides -->
            <div class="carousel-inner">
 
              <div class="carousel-item active">
-               <img src="carousel1.jpg" class="d-block w-100"  alt="work">
+               <img src="carousel1.jpg" class="d-block w-100" alt="work">
                <div class="carousel-caption">
-                 <h2>DE BASIS VAN KWALITEIT...</h2>
+                 <h2 class="H-head">DE BASIS VAN KWALITEIT...</h2>
+                 <p class="tel" href="contact.html">0475 24 57 91</p>
                </div>
              </div>
              <div class="carousel-item">
                <img src="carousel2.jpg" class="d-block w-100" alt="work1">
                <div class="carousel-caption">
-                 <h2>DE BASIS VAN KWALITEIT...</h2>
+                 <h2 class="H-head">DE BASIS VAN KWALITEIT...</h2>
+                 <p class="tel" href="contact.html">0475 24 57 91</p>
                </div>
              </div>
              <div class="carousel-item">
                <img src="carousel3.jpg" class="d-block w-100" alt="work2">
                <div class="carousel-caption">
-                 <h2>DE BASIS VAN KWALITEIT...</h2>
+                 <h2 class="H-head">DE BASIS VAN KWALITEIT...</h2>
+                 <p class="tel" href="contact.html">0475 24 57 91</p>
                </div>
              </div>
            </div>
 
-           <!-- Controls or next and prev buttons -->
+          <!-- Controls or next and prev buttons -->
           <a class="carousel-control-prev" href="#slider" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
           </a>
-          <a class="carousel-control-next" href="slider" role="button" data-slide="next">
+          <a class="carousel-control-next" href="#slider" role="button" data-slide="next">
              <span class="carousel-control-next-icon" aria-hidden="true"></span>
              <span class="sr-only">Next</span>
           </a>
@@ -103,9 +109,6 @@
 
             <!-- Start of contact from right-->
             <div class="c-m-r">
-
-
-
               <div class="contact">
                <div class="login">
                 <input type="text" class="input" placeholder="Naam *">
@@ -114,23 +117,25 @@
                 <input type="text" class="input" placeholder="Telefoon">
                </div>
 
-
                <div class="msg">
                 <textarea class="area" placeholder="Commentaar *"></textarea>
                </div>
-
                <div class="btn">VERZENDEN</div>
               </div>
             </div>
+          </div>
               <!-- end of contact from right -->
 
           <!-- footer -->
           <div class="contact-footer">
-            <img src="Maps.jpg">
+            <div class="footer-img">
+              <img src="Maps.jpg">
+            </div>
           </div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 </body>
 </html>
