Red-line-finished

--- a/index.html
+++ b/index.html
@@ -139,6 +139,21 @@
    </div>
  </div>
 <!-- stop of middle content -->
+<div class="H-middle2">
+
+  <div class="h-m-l-2">
+    <img src="bannerM.png" alt="">
+  </div>
+
+  <div class="h-m-r-2">
+    <h2>KLANTENVRIENDELIJKHEID OP ZIJN BEST</h2>
+    <h3>99% TEVREDEN KLANTEN </h3>
+    <p>Reeds 35	jaar kan u bij ons terecht voor verschillende types grondwerken.</p>
+    <p>Bij onze werken stralen we een warm familiaal contact uit, met uiteraard het nodige professionalisme.</p>
+    <p>Wij doen ons uiterste best om op elke vraag een gepast advies te geven en nemen elk project - groot of klein - graag in handen. Wij zijn pas tevreden wanneer u dit ook bent!</p>
+
+  </div>
+</div>
 
 <!-- start of footer -->
  <div class="H-footer">
@@ -156,7 +171,7 @@
        <li><a href="#"><i class="fab fa-google-plus-square"></i></a></li>
      </ul>
    </div>
-  
+
    <div class="h-f-r">
      <h2>OPENINGSUREN</h2> <hr>
      <p> Ma - Vr : 07u00-18u00 <br>
