--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,6 @@
   <title>Contact - De Saegher</title>
 </head>
 <body>
-  <a class="gotopbtn" href="#"><i class="fas fa-caret-square-up"></i></a>
 
   <!-- Responsive menu -->
   <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
@@ -38,13 +37,13 @@
   </nav>
 
          <!-- Image Carousel-->
-         <div id="slider" class="carousel slide" data-ride="carousel">
+         <div id="slider-contact" class="carousel slide" data-ride="carousel">
 
            <!-- Indicators dot nov -->
            <ol class="carousel-indicators">
-             <li data-target="#slider" data-slide-to="0" class="active"></li>
-             <li data-target="#slider" data-slide-to="1"></li>
-             <li data-target="#slider" data-slide-to="2"></li>
+             <li data-target="#slider-contact" data-slide-to="0" class="active"></li>
+             <li data-target="#slider-contact" data-slide-to="1"></li>
+             <li data-target="#slider-contact" data-slide-to="2"></li>
            </ol>
 
 
@@ -52,34 +51,34 @@
            <div class="carousel-inner">
 
              <div class="carousel-item active">
-               <img src="carousel1.jpg" class="d-block w-100" alt="work">
+               <img src="carousel1contact.jpg" class="d-block w-100" alt="work">
                <div class="carousel-caption">
-                 <h2 class="H-head">DE BASIS VAN KWALITEIT...</h2>
+                 <h2 class="H-head-contact">DE BASIS VAN KWALITEIT...</h2>
                  <p class="tel" href="contact.html">0475 24 57 91</p>
                </div>
              </div>
              <div class="carousel-item">
-               <img src="carousel2.jpg" class="d-block w-100" alt="work1">
+               <img src="carousel2contact.jpg" class="d-block w-100" alt="work1">
                <div class="carousel-caption">
-                 <h2 class="H-head">DE BASIS VAN KWALITEIT...</h2>
+                 <h2 class="H-head-contact">DE BASIS VAN KWALITEIT...</h2>
                  <p class="tel" href="contact.html">0475 24 57 91</p>
                </div>
              </div>
              <div class="carousel-item">
-               <img src="carousel3.jpg" class="d-block w-100" alt="work2">
+               <img src="carousel3contact.jpg" class="d-block w-100" alt="work2">
                <div class="carousel-caption">
-                 <h2 class="H-head">DE BASIS VAN KWALITEIT...</h2>
+                 <h2 class="H-head-contact">DE BASIS VAN KWALITEIT...</h2>
                  <p class="tel" href="contact.html">0475 24 57 91</p>
                </div>
              </div>
            </div>
 
           <!-- Controls or next and prev buttons -->
-          <a class="carousel-control-prev" href="#slider" role="button" data-slide="prev">
+          <a class="carousel-control-prev" href="#slider-contact" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
           </a>
-          <a class="carousel-control-next" href="#slider" role="button" data-slide="next">
+          <a class="carousel-control-next" href="#slider-contact" role="button" data-slide="next">
              <span class="carousel-control-next-icon" aria-hidden="true"></span>
              <span class="sr-only">Next</span>
           </a>
