--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 <div class="H-middle2">
 
   <div class="h-m-l-2">
-    <img src="bannerM.png" alt="">
+    <img src="BannerM.png" alt="">
   </div>
 
   <div class="h-m-r-2">
