--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-  <link rel="stylesheet" href="Red-Line.css">
+  <link rel="stylesheet" href="stylesheet.css">
   <title>Home - De Saegher</title>
 </head>
 <body>
 
 <!-- Responsive menu -->
-<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+<nav id="navbar-scroll" class="navbar open fixed-top navbar-expand-lg navbar-light bg-light">
   <!-- Logo -->
-  <a href="index.html" class="navbar-brand"><img src="Red-line.jpg" alt=""></a>
+  <a href="index.html" class="navbar-brand"><img id="logo-scroll" class="logo" src="Red-line.jpg" alt=""></a>
   <!-- responsive button -->
   <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu">
     <span class="navbar-toggler-icon"></span>
@@ -26,7 +26,7 @@
       <a href="index.html" class="nav-link">HOME</a>
     </li>
     <li class="nav-item">
-      <a href="grondwerken.html" class="nav-link">GRONDWERKEN</a>
+      <a href="#" class="nav-link">GRONDWERKEN</a>
     </li>
     <li class="nav-item">
       <a href="contact.html" class="nav-link">CONTACT</a>
@@ -50,24 +50,24 @@
          <div class="carousel-inner">
 
            <div class="carousel-item active">
-             <img src="carousel1.jpg" class="d-block w-100" alt="work">
+             <img src="carousel1.jpg"  class="d-block w-100" alt="work">
              <div class="carousel-caption">
-               <h2 class="H-head">DE BASIS VAN KWALITEIT...</h2>
-               <p class="tel" href="contact.html">0475 24 57 91</p>
+               <h2 id="test1" class="H-head">DE BASIS VAN KWALITEIT...</h2>
+                 <a class="tel" href="contact.html">0475 24 57 91</a>
              </div>
            </div>
            <div class="carousel-item">
              <img src="carousel2.jpg" class="d-block w-100" alt="work1">
              <div class="carousel-caption">
-               <h2 class="H-head">DE BASIS VAN KWALITEIT...</h2>
-               <p class="tel" href="contact.html">0475 24 57 91</p>
+               <h2 id="test12" class="H-head">DE BASIS VAN KWALITEIT...</h2>
+                 <a class="tel" href="contact.html">0475 24 57 91</a>
              </div>
            </div>
            <div class="carousel-item">
              <img src="carousel3.jpg" class="d-block w-100" alt="work2">
              <div class="carousel-caption">
-               <h2 class="H-head">DE BASIS VAN KWALITEIT...</h2>
-               <p class="tel" href="contact.html">0475 24 57 91</p>
+               <h2 id="test123" class="H-head">DE BASIS VAN KWALITEIT...</h2>
+                 <a class="tel" href="contact.html">0475 24 57 91</a>
              </div>
            </div>
          </div>
@@ -87,7 +87,7 @@
 <!-- Using grid to position top content -->
 <div class="home-full">
   <div class="home-left">
-    <h1>GRONDWERKEN DE SAEGHER EN ZOON TE SINT-NIKLAAS</h1>
+    <h1 id="grondwerken" >GRONDWERKEN DE SAEGHER EN ZOON TE SINT-NIKLAAS</h1>
     <hr/>
 
     <p>Welkom op de website van Grondwerken De Saegher en Zoon.</p>
@@ -158,10 +158,12 @@
 <!-- start of footer -->
  <div class="H-footer">
    <div class="h-f-l">
-       <h2>CONTACTEER ONS</h2> <hr>
-     <p>Anthonis De Jonghestraat 27 <br>
-     9100 Sint-Niklaas België <br>
-     Ligging </p>
+       <a id="contacteer-ons" href="contact.html">CONTACTEER ONS</a><hr>
+       <p>
+           Anthonis De Jonghestraat 27 <br>
+           9100 Sint-Niklaas België <br>
+           Ligging
+       </p>
    </div>
 
    <div class="h-f-m">
@@ -173,15 +175,18 @@
    </div>
 
    <div class="h-f-r">
-     <h2>OPENINGSUREN</h2> <hr>
-     <p> Ma - Vr : 07u00-18u00 <br>
-     Za : gesloten <br>
-     Zo : gesloten</p>
+       <a id="openings-uren" href="contact.html">OPENINGSUREN</a> <hr>
+       <p>
+           Ma - Vr : 07u00-18u00 <br>
+           Za : gesloten <br>
+           Zo : gesloten
+       </p>
    </div>
  </div>
  <!-- end of footer -->
 
 
+  <script src="main.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
